--- a/main_service/config/config.yaml
+++ b/main_service/config/config.yaml
@@ -16,6 +16,7 @@ redis:
 rabbitmq:
   url: "amqp://user:password@rabbitmq:5672/"
   queue_name: ""
+  worker_pool_size: 10
 
 postgres:
   host: "postgres"
