Refactor user registration and authentication flow
- Updated user model to replace first and last name with a single username field.
- Modified SaveUser method in storage to accommodate the new username field.
- Adjusted JWT token generation to include username.
- Refactored login, registration, and verification handlers to use the new username field.
- Enhanced error handling in login and registration processes.
- Updated Dockerfile for email sender service to improve build process and structure.
- Removed deprecated main.go file from email sender service and replaced it with a new implementation.
- Adjusted health check and logging configurations in main service.
- Updated Go module dependencies and ensured compatibility across services.

--- a/auth_service/config/config.yaml
+++ b/auth_service/config/config.yaml
@@ -16,7 +16,7 @@ postgres:
   port: 5432
   user: "user"
   password: "password"
-  dbname: "price_monitoring_app"
+  dbname: "auth_service"
   sslmode: "disable"
 
 rabbitmq:
