--- a/auth_service/.dockerignore
+++ b/auth_service/.dockerignore
@@ -70,6 +70,11 @@ kubernetes/
 *.yml
 !config/*.yaml
 
+# Task / Taskfile
+Taskfile.yml
+Taskfile.yaml
+.task/
+
 # Terraform / Infrastructure
 *.tfstate
 *.tfstate.*
@@ -103,3 +108,7 @@ Makefile
 node_modules/
 .npm/
 .yarn/
+
+# Air (live reload для Go)
+.air.toml
+tmp/
