--- a/email_sender/Dockerfile
+++ b/email_sender/Dockerfile
@@ -1,25 +1,45 @@
-FROM golang:alpine AS builder
+# * Build Stage
+FROM golang:1.23-alpine AS builder
 
 LABEL image_author="Michael Prunchak"
 
-WORKDIR /app
+WORKDIR /build
 
-RUN apk add --no-cache git
+RUN apk add --no-cache \
+	git \
+	ca-certificates \
+	tzdata
+
+ENV GOTOOLCHAIN=auto
 
 COPY go.mod go.sum ./
-RUN go mod download
+
+RUN go mod download && go mod verify
 
 COPY . .
 
-RUN go build -o mail-sender ./cmd/mail-sender
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
+	-ldflags='-w -s -extldflags "-static"' \
+	-trimpath \
+	-o mail_sender \
+	./cmd/mail_sender
 
-FROM alpine:latest
+# * Runtime Stage
+FROM alpine:3.19
+
+LABEL maintainer="Michael Prunchak"
 
 WORKDIR /app
 
-RUN apk add --no-cache ca-certificates
+RUN apk --no-cache add \
+	ca-certificates \
+	tzdata \
+	&& addgroup -g 1000 appgroup \
+	&& adduser -D -u 1000 -G appgroup appuser
 
-COPY --from=builder /app/mail-sender .
-COPY --from=builder /app/config ./config
+COPY --from=builder /build/mail_sender .
+COPY --from=builder /build/config ./config
 
-CMD ["./mail-sender"]
+USER appuser
+
+CMD ["./mail_sender"]
